# subdomain-scanner

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cosign.pub  go.mod  main.go  skaffold.env  skaffold.yaml  subd_deployment.yaml
.github/: pull_request_template.md
.github/scripts/: check_tests.sh  run_pytests.sh
.github/workflows/: ai-integration-workflow.yml  apiquery-integration-workflow.yml  brute-integration-workflow.yml  build-push.yaml  ci-main.yml  delivery-workflow.yaml  delivery.yml  deploy-aws-app-runner.yaml  deploy-ecs  deploy-ecs.yaml  dnsresolve-integration-workflow.yml  frontend-integration-workflow.yml  go.yml  integration-workflow.yaml  integration-workflow.yml  integration.yml  pipeline.yaml  pipeline.yml  subd-main.yaml
api/: api.go  response.go
deploy/cdk/: app.py
deploy/subd/: Chart.yaml  values.yaml
handlers/: web.go
scanners/: crt.go  crt_test.go  scan.go  scanner.go  web_archive.go  web_archive_test.go
scripts/: clean.sh  run.sh
src/aibrutesvc/: genproto.sh  logger.py  requirements.txt  template.py
src/aisupportsvc/: template.py
src/apiquerysvc/: .dockerignore  .gitignore  Dockerfile  apiquerysvc.js  apiquerysvc.ts  (+7 more)
src/portscansvc/: Cargo.toml  Dockerfile  build.rs
src/portscansvc/proto/api/v1/: portscan.proto
src/portscansvc/src/: config.rs  consts.rs  lib.rs  portscan.rs  telemetry.rs
src/portscansvc/tests/: test_portscan.rs
static/: app.js  styles.css
subdomain/: dns.go  port.go  subdomain.go
templates/: index.html
terraform/: providers.tf  terraform.tfvars  variables.tf
(+76 files in other folders)
