[package]
name = "portscansvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "portscan-server"
path = "src/bin/server.rs"


[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.74"
dotenvy = "0.15.7"
envconfig = "0.10.0"
futures = "0.3.30"
init-tracing-opentelemetry = { version = "0.18.0", features = ["tracing_subscriber_ext"] }
prost = "0.12.6"
tempfile = "3.10.1"
tonic = "0.11.0"
tokio = {version = "1.37.0", features = ["rt-multi-thread", "macros"]}
thiserror = "1.0.61"
tonic-health = "0.11.0"
tokio-stream = "0.1.15"
tracing = "0.1.39"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.17", features = ["registry", "tracing-log", "env-filter", "std", "fmt"]}
async-stream = "0.3.5"


[build-dependencies]
tonic-build = {version = "0.11.0", features = ["prost"]}
